// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | FeedbackBanner Complex children 1`] = `
<div
  className="FeedbackBanner__StyledContainer-sc-1q6qf62-0 bcKJBz"
>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dFWLhn"
  >
    <span>
      <svg
        aria-hidden="true"
        className="IconBase__StyledIconBase-sc-10cbji3-0 iEPtiZ"
        focusable="false"
        preserveAspectRatio="xMidYMid meet"
        role="presentation"
        viewBox="0 0 20 20"
      >
        <polygon
          points="10 1 20 19 0 19"
        />
        <polygon
          className="WarningTriangle__StyledPolygon-sc-6bppq2-0 eCyUAX"
          points="11 14 11 16 9 16 9 14 11 14 11 8 11 13 9 13 9 8 11 8"
        />
      </svg>
    </span>
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jeamru FeedbackBanner__TextFlexbox-sc-1q6qf62-1 eBdvBH"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
      >
        Warning, complex child
      </span>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <div>
          <div>
            The message can also be stuctured as a more complex item than just a string
          </div>
          <div>
            For example, you can provide a 
            <a
              className="Link__StyledLink-apj04t-0 ixkkIR"
              href="#/"
              onClick={[Function]}
            >
              link to somewhere
            </a>
             if you want to
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FeedbackBanner Default usage 1`] = `
<div
  className="FeedbackBanner__StyledContainer-sc-1q6qf62-0 gfMatM"
>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dFWLhn"
  >
    <span>
      <svg
        aria-hidden="true"
        className="IconBase__StyledIconBase-sc-10cbji3-0 uMaOK"
        focusable="false"
        preserveAspectRatio="xMidYMid meet"
        role="presentation"
        viewBox="0 0 20 20"
      >
        <path
          d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
        />
        <polygon
          className="InfoCircle__StyledPolygon-sc-1e9thdu-0 ihBKvY"
          points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
        />
      </svg>
    </span>
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jeamru FeedbackBanner__TextFlexbox-sc-1q6qf62-1 eBdvBH"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
      >
        Feedback banner
      </span>
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        Feedback banner should be used within modules to display information that needs attention. Content is flexible, it can contain links and plain text.
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FeedbackBanner Different variant 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      info
    </div>
    <div>
      <div
        className="FeedbackBanner__StyledContainer-sc-1q6qf62-0 gfMatM"
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dFWLhn"
        >
          <span>
            <svg
              aria-hidden="true"
              className="IconBase__StyledIconBase-sc-10cbji3-0 uMaOK"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 20 20"
            >
              <path
                d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
              />
              <polygon
                className="InfoCircle__StyledPolygon-sc-1e9thdu-0 ihBKvY"
                points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
              />
            </svg>
          </span>
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jeamru FeedbackBanner__TextFlexbox-sc-1q6qf62-1 eBdvBH"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
            >
              Info
            </span>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
            >
              This is an information message
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      error
    </div>
    <div>
      <div
        className="FeedbackBanner__StyledContainer-sc-1q6qf62-0 iFRXQq"
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dFWLhn"
        >
          <span>
            <svg
              aria-hidden="true"
              className="IconBase__StyledIconBase-sc-10cbji3-0 jQqIls"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 20 20"
            >
              <path
                d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
              />
              <polygon
                className="CrossCircle__StyledPolygon-trx5td-0 jFynFK"
                points="8.681 9.967 5.073 6.333 6.396 5 10.004 8.634 13.604 5.007 14.916 6.329 11.316 9.956 15 13.667 13.677 15 9.993 11.289 6.312 14.997 5 13.675"
              />
            </svg>
          </span>
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jeamru FeedbackBanner__TextFlexbox-sc-1q6qf62-1 eBdvBH"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
            >
              Error
            </span>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
            >
              This is an error message
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      warning
    </div>
    <div>
      <div
        className="FeedbackBanner__StyledContainer-sc-1q6qf62-0 bcKJBz"
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dFWLhn"
        >
          <span>
            <svg
              aria-hidden="true"
              className="IconBase__StyledIconBase-sc-10cbji3-0 iEPtiZ"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 20 20"
            >
              <polygon
                points="10 1 20 19 0 19"
              />
              <polygon
                className="WarningTriangle__StyledPolygon-sc-6bppq2-0 eCyUAX"
                points="11 14 11 16 9 16 9 14 11 14 11 8 11 13 9 13 9 8 11 8"
              />
            </svg>
          </span>
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jeamru FeedbackBanner__TextFlexbox-sc-1q6qf62-1 eBdvBH"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
            >
              Warning
            </span>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
            >
              This is a warning message
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      success
    </div>
    <div>
      <div
        className="FeedbackBanner__StyledContainer-sc-1q6qf62-0 jAwhWg"
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dFWLhn"
        >
          <span>
            <svg
              aria-hidden="true"
              className="IconBase__StyledIconBase-sc-10cbji3-0 ycRqa"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 20 20"
            >
              <path
                d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
              />
              <polygon
                className="CheckMarkCircle__StyledPolygon-m74und-0 fOEqGh"
                points="13.695 6 15 7.314 8.696 13.69 5 9.924 6.319 8.656 8.696 11.059"
              />
            </svg>
          </span>
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jeamru FeedbackBanner__TextFlexbox-sc-1q6qf62-1 eBdvBH"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
            >
              Success
            </span>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
            >
              This is a success message
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FeedbackBanner Displaying title 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 dODlaT"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      With title
    </div>
    <div>
      <div
        className="FeedbackBanner__StyledContainer-sc-1q6qf62-0 gfMatM"
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dFWLhn"
        >
          <span>
            <svg
              aria-hidden="true"
              className="IconBase__StyledIconBase-sc-10cbji3-0 uMaOK"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 20 20"
            >
              <path
                d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
              />
              <polygon
                className="InfoCircle__StyledPolygon-sc-1e9thdu-0 ihBKvY"
                points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
              />
            </svg>
          </span>
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jeamru FeedbackBanner__TextFlexbox-sc-1q6qf62-1 eBdvBH"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
            >
              This is a title
            </span>
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
            >
              This message has a title
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 ckYvtD"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 dAxmSk"
    >
      Without title
    </div>
    <div>
      <div
        className="FeedbackBanner__StyledContainer-sc-1q6qf62-0 gfMatM"
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 dFWLhn"
        >
          <span>
            <svg
              aria-hidden="true"
              className="IconBase__StyledIconBase-sc-10cbji3-0 uMaOK"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 20 20"
            >
              <path
                d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
              />
              <polygon
                className="InfoCircle__StyledPolygon-sc-1e9thdu-0 ihBKvY"
                points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
              />
            </svg>
          </span>
          <div
            className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 jeamru FeedbackBanner__TextFlexbox-sc-1q6qf62-1 eBdvBH"
          >
            <span
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
            >
              This message does not have a title
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
